<resources>
    <string name="app_name">BaguioSiglat</string>
    <string name="home">Home</string>
    <string name="govt_services">Govt. Services</string>
    <string name="volunteer">Volunteer</string>
    <string name="you">You</string>
    <string name="siglat_baguio">SIGLAT BAGUIO</string>
    <string name="see_more"><u>See more</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sigma_meal_nskibdi_slicers">WATCH | Special #KapihanSaBaguio on the 70th Annual National Mine Safety and Environment Conference led by Philippine Mine Safety and Environment Association (PMSEA).</string>
    <string name="header">Department of Fent Reactor</string>
    <string name="fent_reactor_online">Fent Reactor Online</string>
    <string name="logo_of_siglat">Logo of Siglat</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="login_button">Login Button</string>
    <string name="a_z">A-Z</string>
    <string name="profile_header">Personal Info</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="full_name">Full Name</string>
    <string name="already_have_an_account"><u>Already have an account?</u></string>
    <string name="register"><u>Register</u></string>
    <string name="register_desc">Register</string>
    <string name="logout">Logout</string>
    <string name="don_t_have_an_account"><u>Don\'t have an account?</u></string>
    <string name="phone_number_register">Phone Number</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="george_droid_online">GEORGE DROID ONLINE</string>
    <string name="volunteer_btn">View</string>
    <string name="event_title">Event Title</string>
    <string name="fentgpt">FentGPT</string>
    <string name="fentnet_research_plant">FentNET Research Plant</string>
    <string name="george_droid_09053195976_droid_gmail_com">George Droid - 09053195976 - droid@gmail.com</string>
    <string name="_05_20_2020_10_58">05-20-2020 | 10:58</string>
    <string name="sign_up">Sign-up</string>
    <string name="george_droid_online_text">George Droid Online</string>
    <string name="organize_an_event">Organize an Event</string>
    <string name="fentnet">FentNet</string>
    <string name="organized_events">Organized Events</string>
    <string name="volunteered_events">Volunteered Events</string>
    <string name="inbox">Inbox</string>
    <string name="organization">Organization</string>
    <string name="administrator">Administrator</string>
    <string name="george_droid">George Droid</string>
    <string name="droidgeorge_gmail_com">droidgeorge@gmail.com</string>
    <string name="_090531959676">090531959676</string>
    <string name="september_11_2001_at_9_11">September 11, 2001 at 9:11</string>
    <string name="cancel">Cancel</string>
    <string name="view_participants">View Participants</string>
</resources>