<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/page_1"
        android:enabled="true"
        android:icon="@drawable/home"
        android:title="@string/home"/>

    <item
        android:id="@+id/page_2"
        android:enabled="true"
        android:icon="@drawable/services"
        android:title="@string/govt_services"/>

    <item
        android:id="@+id/page_3"
        android:enabled="true"
        android:icon="@drawable/volunteer"
        android:title="@string/volunteer" />

    <item
        android:id="@+id/page_4"
        android:enabled="true"
        android:icon="@drawable/inbox"
        android:title="@string/inbox"/>

    <item
        android:id="@+id/page_5"
        android:enabled="true"
        android:icon="@drawable/user"
        android:title="@string/you" />
</menu>