<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/link_to_website"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.95"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.95"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp"
        android:background="#FCFCFC">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">
            
            <TextView
                android:id="@+id/name_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/george_droid"
                android:fontFamily="@font/inter_bold"
                android:textSize="16sp"
                android:textColor="#B82727"/>

            <TextView
                android:id="@+id/email_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/droidgeorge_gmail_com"
                android:fontFamily="@font/inter_regular"
                android:textSize="11sp"
                android:textColor="#707070"/>

            <TextView
                android:id="@+id/phone_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_090531959676"
                android:fontFamily="@font/inter_regular"
                android:textSize="11sp"
                android:textColor="#707070"/>

            <TextView
                android:id="@+id/message_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/george_droid_online"
                android:fontFamily="@font/inter_regular"
                android:textSize="11sp"
                android:textColor="#707070"/>

            <LinearLayout
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/date_notification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/september_11_2001_at_9_11"
                    android:fontFamily="@font/inter_regular"
                    android:textSize="11sp"
                    android:textColor="#707070"/>

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>