<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.95"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp"
        android:background="#FCFCFC">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/event_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/george_droid_online"
                android:fontFamily="@font/inter_bold"
                android:textSize="16sp"
                android:textColor="#B82727"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:id="@+id/event_owner_preview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fentnet"
                android:fontFamily="@font/inter_semi_bold"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:layout_gravity="center_vertical"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/event_date_preview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Nov 9 2021"
                    android:fontFamily="@font/inter_medium"
                    android:textSize="11sp"
                    android:textColor="@color/black"
                    android:layout_gravity="center_vertical"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/view_full_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:background="@drawable/volunteer_bg"
                    android:textColor="@color/white"
                    android:fontFamily="@font/inter_regular"
                    android:textAllCaps="false"
                    android:textSize="11sp"
                    android:text="@string/volunteer_btn" />


            </FrameLayout>
            
        </LinearLayout>


    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>